--- a/glosario_pensamiento_algoritmico.html
+++ b/glosario_pensamiento_algoritmico.html
@@ -61,6 +61,8 @@
 <summary>Aleatorio</summary>
 <article>
 <p>Es algo que no sigue una pauta definida ejemplo en un experimiento aleatorio si hay mas de un resultade posible y no podemos decir con anteriorded lo que va a suceder, en este caso depende del azar,no sigue una pauta definida.</p> 
+<br>
+<p> Ejemplo:  Elegir al azar un nombre de un sombrero para decidir quién lavará los platos.</p>
 </article>
 	<img src="imagenes/Aleatorio.png" alt="Logo 2024" class="imagenessistemico">
 </details>
@@ -69,6 +71,8 @@
 <summary>Algoritmo</summary>
 <article>
 <p> Secuencia de pasos para solucionar un problema.</p> 
+<br>
+<p> Ejemplo: La receta de un pastel es un algoritmo que, si se sigue paso a paso, te llevará a un resultado específico.</p>
 </article>
 	<img src="imagenes/Algoritmo.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
@@ -77,6 +81,8 @@
 <summary>Seudocodigo</summary>
 <article>
 <p> Instrucciones que se entregan en el lenguaje propio de la persona para resoluer un algoritmo.</p> 
+<br>
+<p> Ejemplo: Explicar a un amigo cómo llegar a tu casa con instrucciones simples y claras, como "Gira a la izquierda en la segunda calle, luego camina tres cuadras y busca el edificio azul".</p>
 </article>
 	<img src="imagenes/Seudocodigo.png" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -85,6 +91,8 @@
 <summary>Nemotecnica</summary>
 <article>
 <p>Consiste en dividir la informacion en grupos mas pequeños, como numeros palabras o frases para facilitar su aprendizaje Conjunto de estrategias que ayudan a retener ideas complejas de manera sencilla.</p> 
+<br>
+<p> Ejemplo: Usar la frase "Nunca estuve tan feliz" para recordar los colores del arcoíris (rojo, naranja, amarillo, verde, azul, índigo, violeta).</p>
 </article>
 	<img src="imagenes/Nemotecnica.png" alt="Logo 2024" class="imagenessistemico">
 </details>        
@@ -93,6 +101,8 @@
 <summary>Secuencial</summary>
 <article>
 <p>Serie de eventos, procesas o procedimientos que ocurren en un orden determinad uno tras otro.</p> 
+<br>
+<p> Ejemplo: Seguir los pasos para preparar un café: poner agua a hervir, moler el café, colocar el filtro y verter el agua.</p>
 </article>
 	<img src="imagenes/Secuencial.png" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -101,6 +111,8 @@
 <summary>Condicional</summary>
 <article>
 <p>Son estructuras que permiten elegir entre la ejecucion de una accion u otra.</p> 
+<br>
+<p> Ejemplo: Si llueve, llevaré un paraguas. Si hace sol, usaré gafas de sol.</p>
 </article>
 	<img src="imagenes/Condicional.png" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -109,6 +121,8 @@
 <summary>Variable</summary>
 <article>
 <p> Representa un contenedor o un espacio en la memoria fisica o virtual de una computadora, donde se almacenan distintos tipos de datos (valores) durante la ejecucion de un programa.</p> 
+<br>
+<p> Ejemplo: La temperatura es una variable que cambia constantemente a lo largo del día.</p>
 </article>
 	<img src="imagenes/Variable.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -117,6 +131,8 @@
 <summary>mnemotecnia</summary>
 <article>
 <p>Procedimiento de asociación mental para facilitar el recuerdo de algo. Por ejemplo, en lugar de intentar recordar el número 47895328463 de una sola vez, puedes fragmentarlo en grupos como 4789/532/8463, lo que lo hace más manejable y fácil de recordar.</p> 
+<br>
+<p> Ejemplo:  Usar la frase "Nunca estuve tan feliz" para recordar los colores del arcoíris (rojo, naranja, amarillo, verde, azul, índigo, violeta).</p>
 </article>
 	<img src="imagenes/mnemotecnia.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -125,6 +141,8 @@
 <summary>servidor</summary>
 <article>
 <p>Un servidor, es un ordenador conectado a Internet que tiene comofuncionesprincipales almacenar páginas web generalmente escritas en HTML (HyperText Transfer Protocol), administrar bases de datos y responder a las solicitudes de los navegadores de los internautas.</p> 
+<br>
+<p> Ejemplo: Un restaurante es como un servidor que te "sirve" comida.</p>
 </article>
 	<img src="imagenes/servidor.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -133,6 +151,8 @@
 <summary>módem</summary>
 <article>
 <p>Aparato que convierte las señales digitales en analógicas y viceversa, y que permite la comunicación entre dos computadoras a través de una línea telefónica o de un cable.</p> 
+<br>
+<p> Ejemplo: El dispositivo que conecta tu computadora a Internet es un módem.</p>
 </article>
 	<img src="imagenes/módem.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -141,6 +161,8 @@
 <summary>Red lan</summary>
 <article>
 <p>Una red de área local (LAN) es una red contenida dentro de una pequeña zona geográfica, normalmente dentro del mismo edificio. Las redes WiFi domésticas y las redes de pequeñas empresas son algunos ejemplos comunes de LAN.</p> 
+<br>
+<p> Ejemplo: La red de computadoras en una oficina es un ejemplo de una red LAN.</p>
 </article>
 	<img src="imagenes/Red lan.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -149,6 +171,8 @@
 <summary>digital</summary>
 <article>
 <p> digital describe el uso dominante de las tecnologías informáticas más recientes para mejorar los procesos organizativos, potenciar las interacciones entre personas, organizaciones y cosas y posibilitar nuevos modelos de negocio, entre otros aspectos.</p> 
+<br>
+<p> Ejemplo: Una fotografía digital está compuesta por pequeños puntos de color (píxeles).</p>
 </article>
 	<img src="imagenes/digital.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -157,6 +181,8 @@
 <summary> hosting </summary>
 <article>
 <p>El hosting web es un servicio que proporciona almacenamiento para los archivos que componen su sitio web y el software, el hardware físico y la infraestructura de red que hace que su sitio web esté disponible para otros en Internet.</p> 
+<br>
+<p> Ejemplo: Al subir tus fotos a una plataforma como Google Photos, estás utilizando un servicio de hosting.</p>
 </article>
 	<img src="imagenes/hosting.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -165,6 +191,8 @@
 <summary>router </summary>
 <article>
 <p>Un router es un dispositivo que proporciona Wi-Fi y que generalmente está conectado a un módem. Envía información desde Internet a los dispositivos personales, como computadoras, teléfonos o tablets. Los dispositivos conectados a Internet de tu casa conforman la red de área local (LAN).</p> 
+<br>
+<p> Ejemplo: El dispositivo que conecta tu computadora a tu módem y a otros dispositivos en tu hogar es un router.</p>
 </article>
 	<img src="imagenes/router.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -173,6 +201,8 @@
 <summary> analógico</summary>
 <article>
 <p>Que presenta información, especialmente una medida, mediante una magnitud física continua proporcional al valor de dicha información.</p> 
+<br>
+<p> Ejemplo: Un reloj de agujas es un dispositivo analógico, ya que muestra la hora de forma continua.</p>
 </article>
 	<img src="imagenes/analógico.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -181,6 +211,8 @@
 <summary>diagrama de flujo</summary>
 <article>
 <p>Un diagrama de flujo o flujograma es una representación gráfica y secuencial de un proceso o flujo de trabajo con todas las tareas y actividades principales necesarias para lograr un objetivo común.</p> 
+<br>
+<p> Ejemplo: Un mapa es un tipo de diagrama de flujo que te muestra cómo llegar de un lugar a otro.</p>
 </article>
 	<img src="imagenes/diagrama de flujo.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -189,6 +221,8 @@
 <summary>estructuras secuenciales</summary>
 <article>
 <p>es aquella en la que una instrucción o acción sigue a otra en secuencia. En este tipo de programación se presentan operaciones de inicio a fin, inicialización de variables, operaciones de asignación, cálculo, sumarización, entre otras.</p> 
+<br>
+<p> Ejemplo: Las instrucciones para armar un mueble son un ejemplo de una estructura secuencial.</p>
 </article>
 	<img src="imagenes/estructuras secuenciales.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -197,6 +231,8 @@
 <summary>estructuras condicionales</summary>
 <article>
 <p>permite decidir por cuál alternativa seguirá el flujo del programa dependiendo del resultado de la evaluación de una condición. Para establecer condiciones complejas se utilizan los operadores relacionales y lógicos.</p> 
+<br>
+<p> Ejemplo: Si tienes hambre, irás a la cocina a buscar comida. Esta es una decisión basada en una condición (tener hambre).</p>
 </article>
 	<img src="imagenes/estructuras condicionales.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
