--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -71,8 +71,10 @@
 <article>
 <p> es aquel que interactúa con su entorno, es decir, intercambia materia, energía o información con el exterior. Estos sistemas pueden recibir entradas o recursos del exterior y producir salidas o productos que afectan al entorno.
 Ejemplo
-Una empresa de sistema abierto. Recibe materias primas, recursos humanos y financieros del entorno, y luego produce bienes o servicios que entrega de vuelta al mercado.
-</p> 
+Una empresa de sistema abierto. Recibe materias primas, recursos humanos y financieros del entorno, y luego produce bienes o servicios que entrega de vuelta al mercado.</p> 
+<br>
+<p> Ejemplo: </p>
+
 </article>
 	<img src="imagenes/Sistemaabierto.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>             
@@ -80,8 +82,9 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <details>
 <summary>Sistema cerrado:</summary>
 <article>
-<p>es aquel que no interactúa con su entorno, es decir, no intercambia materia, energía o información con el exterior. Estos sistemas son autónomos y no reciben entradas o recursos del exterior, ni producen salidas o productos que afecten al entorno.
-</p> 
+<p>es aquel que no interactúa con su entorno, es decir, no intercambia materia, energía o información con el exterior. Estos sistemas son autónomos y no reciben entradas o recursos del exterior, ni producen salidas o productos que afecten al entorno.</p> 
+<br>
+<p> Ejemplo: </p>
 </article>
 	<img src="imagenes/Sistemacerrado.jpeng" alt="Logo 2024" class="imagenessistemico">
 </details>        
@@ -90,6 +93,8 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <summary>Sistema natural:</summary>
 <article>
 <p>es un conjunto de elementos que interactúan entre si y con su entorno, siguiendo leyes y principios físicos, químicos y biológicos, sin intervención humana. Estos sistemas pueden ser complejos y dinámicos.</p> 
+<br>
+<p> Ejemplo: </p>
 </article>
 	<img src="imagenes/Sistema natural.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -98,6 +103,8 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <summary>Sistema artificial:</summary>
 <article>
 <p>es un conjunto de elementos que interactúan entre sí y con su entorno, diseñado y creado por humanos para lograr un objetivo específico. Estos sistemas pueden ser físicos, como máquinas o estructuras, o abstractos, como algoritmos o programas informáticos.</p> 
+<br>
+<p> Ejemplo: </p>
 </article>
 	<img src="imagenes/Sistemaartificial.png" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -105,9 +112,9 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <details>
 <summary>Sistema determinístico:</summary>
 <article>
-<p> Un sistema determinístico es aquel en el que las condiciones iniciales determinan completamente su comportamiento futuro. Esto significa que, dado un conjunto de condiciones iniciales específicas, el sistema siempre producirá el mismo resultado sin ninguna variabilidad o aleatoriedad.
-Ejemplo Un reloj mecánico es un ejemplo de sistema determinístico. Si se le da cuerda al reloj y se conoce su diseño interno, se puede predecir con exactitud la posición de las manecillas en cualquier momento futuro, ya que el mecanismo sigue reglas físicas fijas sin variabilidad en su funcionamiento
-</p> 
+<p> Un sistema determinístico es aquel en el que las condiciones iniciales determinan completamente su comportamiento futuro. Esto significa que, dado un conjunto de condiciones iniciales específicas, el sistema siempre producirá el mismo resultado sin ninguna variabilidad o aleatoriedad.</p>
+<br>
+<p> Ejemplo: Un reloj mecánico es un ejemplo de sistema determinístico. Si se le da cuerda al reloj y se conoce su diseño interno, se puede predecir con exactitud la posición de las manecillas en cualquier momento futuro, ya que el mecanismo sigue reglas físicas fijas sin variabilidad en su funcionamiento</p>
 </article>
 	<img src="imagenes/Sistemadeterministico.png" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -115,8 +122,9 @@ Ejemplo Un reloj mecánico es un ejemplo de sistema determinístico. Si se le da
 <details>
 <summary>sistema probabilístico:</summary>
 <article>
-<p>es un sistema que se basa en la probabilidad para tomar decisiones o predecir resultados. En estos sistemas, se utiliza la teoría de la probabilidad para modelar la incertidumbre y la variabilidad de los eventos o resultados.
-</p> 
+<p>es un sistema que se basa en la probabilidad para tomar decisiones o predecir resultados. En estos sistemas, se utiliza la teoría de la probabilidad para modelar la incertidumbre y la variabilidad de los eventos o resultados.</p> 
+<br>
+<p> Ejemplo: Al lanzar una moneda al aire, tenemos un 50% de probabilidad de que caiga cruz.</p>
 </article>
 	<img src="imagenes/sistemaprobabilistico.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -124,10 +132,9 @@ Ejemplo Un reloj mecánico es un ejemplo de sistema determinístico. Si se le da
 <details>
 <summary>sistema Gestalt:</summary>
 <article>
-<p>La Gestalt es una teoría psicológica que se centra en la percepción y la experiencia humana, especialmente en cómo las personas organizan y perciben la información visual. 
-Ejemplo
-Un triángulo formado por tres ángulos abiertos (o sea, con las líneas incompletas) será percibido por la mayoría de las personas como un triángulo completo.
-</p> 
+<p>La Gestalt es una teoría psicológica que se centra en la percepción y la experiencia humana, especialmente en cómo las personas organizan y perciben la información visual. </p> 
+<br>
+<p> Ejemplo: Un triángulo formado por tres ángulos abiertos (o sea, con las líneas incompletas) será percibido por la mayoría de las personas como un triángulo completo.</p>
 </article>
 	<img src="imagenes/sistemaGestalt.png" alt="Logo 2024" class="imagenessistemico">
 </details> 	
@@ -136,6 +143,8 @@ Un triángulo formado por tres ángulos abiertos (o sea, con las líneas incompl
 <summary>sistema equinifinidad </summary>
 <article>
 <p>La equifinidad es un concepto utilizado en la teoria de sistema y la cibernetica para describir la capacidad de un sistema para alcanzar un estado final o objetivos a traves de diferentes de diferentes caminos o procesos</p> 
+<br>
+<p> Ejemplo: la temperatura del cuerpo humano que se mantiene estable a pesar de los cambios de temperatura externos y la humedad que pueda estar presente</p>
 </article>
 	<img src="imagenes/sistemaequinifidad.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -143,10 +152,9 @@ Un triángulo formado por tres ángulos abiertos (o sea, con las líneas incompl
 <details>
 <summary> sinergia: </summary>
 <article>
-<p>La sinergia es el concepto que describe cómo la combinación de elementos o partes produce un resultado superior al que se obtendría sumando los esfuerzos individuales de cada uno por separado. 
-Ejemplo
-En un equipo de trabajo, la sinergia ocurre cuando los miembros colaboran de manera efectiva, combinando sus habilidades y conocimientos para alcanzar un objetivo común de manera más eficiente y con mejores resultados que si cada uno trabajara por separado.
-</p> 
+<p>La sinergia es el concepto que describe cómo la combinación de elementos o partes produce un resultado superior al que se obtendría sumando los esfuerzos individuales de cada uno por separado. </p> 
+<br>
+<p> Ejemplo: En un equipo de trabajo, la sinergia ocurre cuando los miembros colaboran de manera efectiva, combinando sus habilidades y conocimientos para alcanzar un objetivo común de manera más eficiente y con mejores resultados que si cada uno trabajara por separado.</p>
 </article>
 	<img src="imagenes/sinergia.png" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -154,8 +162,9 @@ En un equipo de trabajo, la sinergia ocurre cuando los miembros colaboran de man
 <details>
 <summary> recursividad: </summary>
 <article>
-<p> La recursividad es una propiedad de los sistemas, procesos o funciones que se refiere a la capacidad de llamarse a sí mismos o de repetirse de manera autorreferencial. En otras palabras, un sistema o proceso recursivo es aquel que se utiliza a sí mismo como parte de su propio proceso o función.
-</p> 
+<p> La recursividad es una propiedad de los sistemas, procesos o funciones que se refiere a la capacidad de llamarse a sí mismos o de repetirse de manera autorreferencial. En otras palabras, un sistema o proceso recursivo es aquel que se utiliza a sí mismo como parte de su propio proceso o función.</p> 
+<br>
+<p> Ejemplo: Se define como que 0 es un número natural y que el sucesor de un número natural también es un número natural.</p>
 </article>
 	<img src="imagenes/recursividad.png" alt="Logo 2024" class="imagenessistemico">
 </details>	
@@ -163,10 +172,9 @@ En un equipo de trabajo, la sinergia ocurre cuando los miembros colaboran de man
 <details>
 <summary> morfogénesis: </summary>
 <article>
-<p> La morfogénesis es el proceso biológico por el cual un organismo o una estructura adquiere su forma específica durante el desarrollo. 
-Ejemplo 
-Durante el desarrollo embrionario de un ser humano, la morfogénesis es lo que guía la formación de órganos como el corazón, los pulmones y el cerebro.
-</p> 
+<p> La morfogénesis es el proceso biológico por el cual un organismo o una estructura adquiere su forma específica durante el desarrollo. </p> 
+<br>
+<p> Ejemplo: Durante el desarrollo embrionario de un ser humano, la morfogénesis es lo que guía la formación de órganos como el corazón, los pulmones y el cerebro.</p>
 </article>
 	<img src="imagenes/morfogénesis.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -174,8 +182,9 @@ Durante el desarrollo embrionario de un ser humano, la morfogénesis es lo que g
 <details>
 <summary> Organicidad </summary>
 <article>
-<p> La organicidad se refiere a la calidad o estado de ser orgánico, es decir, relativo a los seres vivos o a los sistemas que presentan características similares a los seres vivos. En este sentido, la organicidad implica la presencia de estructuras, procesos y relaciones que se encuentran en los sistemas biológicos.
-</p> 
+<p> La organicidad se refiere a la calidad o estado de ser orgánico, es decir, relativo a los seres vivos o a los sistemas que presentan características similares a los seres vivos. En este sentido, la organicidad implica la presencia de estructuras, procesos y relaciones que se encuentran en los sistemas biológicos.</p> 
+<br>
+<p> Ejemplo: El sistema inmunitario es un ejemplo de sistema orgánico integrado. Este sistema está formado por linfocitos, leucocitos, plaquetas y anticuerpos, entre otros, y protege al cuerpo de enfermedades producidas por agentes externos, como virus y bacterias. </p>
 </article>
 	<img src="imagenes/Organicidad.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -183,10 +192,9 @@ Durante el desarrollo embrionario de un ser humano, la morfogénesis es lo que g
 <details>
 <summary> Isomorfismo: </summary>
 <article>
-<p> El isomorfismo es un concepto que se refiere a una correspondencia estructural o una relación uno a uno entre dos estructuras que mantienen la misma forma o propiedades. 
-Ejemplo 
-En programación, dos estructuras de datos que tienen la misma organización y permiten las mismas operaciones pueden ser consideradas isomorfas, aunque se implementen de manera diferente.
-</p> 
+<p> El isomorfismo es un concepto que se refiere a una correspondencia estructural o una relación uno a uno entre dos estructuras que mantienen la misma forma o propiedades. </p> 
+<br>
+<p> Ejemplo: En programación, dos estructuras de datos que tienen la misma organización y permiten las mismas operaciones pueden ser consideradas isomorfas, aunque se implementen de manera diferente.</p>
 </article>
 	<img src="imagenes/Isomorfismo.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -195,6 +203,8 @@ En programación, dos estructuras de datos que tienen la misma organización y p
 <summary> homeomorfismo </summary>
 <article>
 <p> Un homeomorfismo es un concepto matemático que se refiere a una correspondencia entre dos espacios topológicos que preserva la estructura topológica de los espacios. En otras palabras, un homeomorfismo es una transformación que mantiene las propiedades topológicas de los espacios, como la conectividad, la compacidad y la dimensionalidad. Formalmente, un homeomorfismo es una función continua y biyectiva entre dos espacios topológicos, X e Y, que tiene una función inversa continua. Esto significa que la función y su inversa son ambas continuas, y que cada punto en X se corresponde con un punto único en Y, y viceversa.</p> 
+<br>
+<p> Ejemplo: la inclusión de los números enteros en los números racionales. Este es un homomorfismo de anillos y de semigrupos multiplicativos.</p>
 </article>
 	<img src="imagenes/homeomorfismo.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details> 
@@ -202,10 +212,9 @@ En programación, dos estructuras de datos que tienen la misma organización y p
 <details>
 <summary> homeóstasis </summary>
 <article>
-<p> es el proceso por el cual un organismo mantiene un equilibrio interno constante a pesar de los cambios en el entorno externo. 
-Ejemplo 
-Cuando la temperatura corporal aumenta debido al calor externo, el cuerpo activa mecanismos como la sudoración para enfriarse. 
-</p> 
+<p> es el proceso por el cual un organismo mantiene un equilibrio interno constante a pesar de los cambios en el entorno externo. </p> 
+<br>
+<p> Ejemplo: Cuando la temperatura corporal aumenta debido al calor externo, el cuerpo activa mecanismos como la sudoración para enfriarse. </p>
 </article>
 	<img src="imagenes/homeostasis.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
