--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -69,11 +69,9 @@
 <details>
 <summary>Sistema abierto:</summary>
 <article>
-<p> es aquel que interactúa con su entorno, es decir, intercambia materia, energía o información con el exterior. Estos sistemas pueden recibir entradas o recursos del exterior y producir salidas o productos que afectan al entorno.
-Ejemplo
-Una empresa de sistema abierto. Recibe materias primas, recursos humanos y financieros del entorno, y luego produce bienes o servicios que entrega de vuelta al mercado.</p> 
+<p> es aquel que interactúa con su entorno, es decir, intercambia materia, energía o información con el exterior. Estos sistemas pueden recibir entradas o recursos del exterior y producir salidas o productos que afectan al entorno.</p> 
 <br>
-<p> Ejemplo: </p>
+<p> Ejemplo: Una empresa de sistema abierto. Recibe materias primas, recursos humanos y financieros del entorno, y luego produce bienes o servicios que entrega de vuelta al mercado.</p>
 
 </article>
 	<img src="imagenes/Sistemaabierto.jpeg" alt="Logo 2024" class="imagenessistemico">
@@ -84,7 +82,7 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <article>
 <p>es aquel que no interactúa con su entorno, es decir, no intercambia materia, energía o información con el exterior. Estos sistemas son autónomos y no reciben entradas o recursos del exterior, ni producen salidas o productos que afecten al entorno.</p> 
 <br>
-<p> Ejemplo: </p>
+<p> Ejemplo: El café y el aire en el termo forman un sistema cerrado. Aunque el calor puede escapar a través de la tapa del termo en forma de energía térmica, no entra ni sale café ni aire, lo que lo hace un sistema cerrado. Un globo inflado: Un globo lleno de aire es otro ejemplo de sistema cerrado.</p>
 </article>
 	<img src="imagenes/Sistemacerrado.jpeng" alt="Logo 2024" class="imagenessistemico">
 </details>        
@@ -94,7 +92,7 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <article>
 <p>es un conjunto de elementos que interactúan entre si y con su entorno, siguiendo leyes y principios físicos, químicos y biológicos, sin intervención humana. Estos sistemas pueden ser complejos y dinámicos.</p> 
 <br>
-<p> Ejemplo: </p>
+<p> Ejemplo: La Tierra, Los ríos, Las montañas, Los océanos, Los bosques, El sistema solar</p>
 </article>
 	<img src="imagenes/Sistema natural.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>           
@@ -104,7 +102,7 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <article>
 <p>es un conjunto de elementos que interactúan entre sí y con su entorno, diseñado y creado por humanos para lograr un objetivo específico. Estos sistemas pueden ser físicos, como máquinas o estructuras, o abstractos, como algoritmos o programas informáticos.</p> 
 <br>
-<p> Ejemplo: </p>
+<p> Ejemplo: Un sistema artificial es un artefacto diseñado por el ser humano que puede incluir tecnología, procesos humanos y procedimientos</p>
 </article>
 	<img src="imagenes/Sistemaartificial.png" alt="Logo 2024" class="imagenessistemico">
 </details>           
