--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -62,6 +62,9 @@
 <summary>Sistema:</summary>
 <article>
 <p>Es un conjunto organizado de cosas o partes interactuantes e interdependientes, que se relacionan formando un todo unitario y complejo.</p> 
+<br>
+<p> Ejemplo: El cuerpo humano, que incluye el sistema circulatorio, el sistema térmico cerrado, el sistema lingüístico, entre otros.</p>
+
 </article>
 	<img src="imagenes/sistema.png" alt="Logo 2024" class="imagenessistemico">
 </details>
