--- a/formulario.html
+++ b/formulario.html
@@ -12,7 +12,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-  <script type="text/javascript" src="funciones_validacion.js"></script>   
+  <script type="text/javascript" src="js/funciones_validacion.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>   
   <link rel="stylesheet" href="css/estilos1.css">
 </head>
 <main>
@@ -62,34 +63,34 @@
 
       <div class="col-md-4">
         <label for="validaciondenombre" class="form-label">Nombre</label>
-        <input type="text" class="form-control" name="nombre" id="validaciondenombre" placeholder="ingrese su nombre completo" value="" required="">
+        <input type="text" class="form-control" name="nombre" id="validaciondenombre" placeholder="ingrese su nombre completo">
       </div>
       <div class="col-md-4">
         <label for="validaciondeapellido" class="form-label">Apellido</label>
-        <input type="text" class="form-control" name="apellido" id="validaciondeapellido" placeholder="ingrese su apellido completo" value="" required="">
+        <input type="text" class="form-control" name="apellido" id="validaciondeapellido" placeholder="ingrese su apellido completo" >
       </div>
       <div class="col-md-4">
         <label for="validaciondecorreo" class="form-label">Correo eletronico</label>
         <div class="input-group">
-            <input type="text" class="form-control"  id="validaciondecorreo" aria-describedby="validaciondecorreo" placeholder="ingrese su correo estudiantil" required="">
-            <span class="input-group-text"  id="validaciondecorreo">@ucundinamarca.edu.co</span>
+            <input type="text" class="form-control"  id="validaciondecorreo" aria-describedby="validaciondecorreo" placeholder="ingrese su correo estudiantil" >
+           
         </div>
     </div>
     
       <div class="col-md-6">
         <label for="validaciondeaños" class="form-label">Edad</label>
-        <input type="text" class="form-control" id="validaciondeaños" placeholder="ingrese su edad" required="">
+        <input type="text" class="form-control" id="validaciondeaños" placeholder="ingrese su edad" >
       </div>
       <div class="col-12">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required="">
+          <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" >
           <label class="form-check-label" for="invalidCheck2">
             agregar terminos y condiciones
           </label>
         </div>
       </div>
       <div class="col-12">
-        <button class="btn btn-primary" type="submit">Enviar</button>
+        <button class="btn-bonito" type="submit">Enviar</button>
       </div>
     </form>  
 </header>
@@ -104,5 +105,7 @@
 <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
 </div>
 </footer>
+
+
 </body>
 </html>
