--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -87,7 +87,7 @@
 <br>
 <p> Ejemplo: El café y el aire en el termo forman un sistema cerrado. Aunque el calor puede escapar a través de la tapa del termo en forma de energía térmica, no entra ni sale café ni aire, lo que lo hace un sistema cerrado. Un globo inflado: Un globo lleno de aire es otro ejemplo de sistema cerrado.</p>
 </article>
-	<img src="imagenes/Sistemacerrado.jpeng" alt="Logo 2024" class="imagenessistemico">
+	<img src="imagenes/Sistemacerrado.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>        
      
 <details>
@@ -147,7 +147,7 @@
 <br>
 <p> Ejemplo: la temperatura del cuerpo humano que se mantiene estable a pesar de los cambios de temperatura externos y la humedad que pueda estar presente</p>
 </article>
-	<img src="imagenes/sistemaequinifidad.png" alt="Logo 2024" class="imagenessistemico">
+	<img src="imagenes/sistemaequinifinidad.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
            
 <details>
