--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 
 <footer>
 <div class="footer-text">
-  <a href="formulario.html">
-    <button class="btn-primary" type="submit">Contactanos</button>
-  </a>
+   <a class="btn-bonito" href="formulario.html" role="button">Contactanos</a>
 <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
 </div>
 
