--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
   <meta name="keywords" content="Glosario, Sistemas Operativos, Microprocesadores, Ingeniería Mecatronica, Sistemas, UCundinamarca">
   <title>Glosario Ing Mecatronica</title>
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <title>Bootstrap Example</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 
