--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
 <footer>
 <div class="footer-text">
-   <a class="btn-bonito" href="formulario.html" role="button">Contactanos</a>
+   <a href="formulario.html">
+    <button class="btn-bonito" type="submit">Contactanos</button>
+  </a>
 <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
 </div>
 
