--- a/proyecto.html
+++ b/proyecto.html
@@ -213,6 +213,8 @@
                 Sistema De Riego
                 Este formulario está diseñado para recopilar opiniones e información sobre el uso de sistemas de riego automatizados en la agricultura. Queremos entender cómo perciben estos sistemas y qué tanto conocimiento existe sobre ellos, para poder mejorar las prácticas y la capacitación en torno a esta tecnología. Las respuestas que brinde serán tratadas de manera anónima y ayudarán a orientar el desarrollo de soluciones sostenibles y autónomas para la gestión del agua en el campo. 
                 <br>
+                <img src="1 encuesta.png" alt="Logo 2024" class="1 encuesta">
+                <br>
                 1. ¿Estás familiarizado/a con el concepto de riego sostenible?
                 <br>
                 a) Sí, conozco bien el tema.
