--- a/proyecto.html
+++ b/proyecto.html
@@ -221,6 +221,8 @@
                 <br>
                 c) No, no conozco el concepto
                 <br>
+                La pregunta de la encuesta nos arrojo los siguientes datos
+                <br>
                 <img src="imagenes/1 encuesta.jpg" alt="Logo 2024" class="1 encuesta">
                 <br>
                 2. ¿Qué beneficio te parece más relevante en un sistema de riego automatizado?
@@ -233,6 +235,8 @@
                 <br>
                 <img src="imagenes/2 encuesta.jpg" alt="Logo 2024" class="1 encuesta">
                 <br>
+                 La pregunta de la encuesta nos arrojo los siguientes datos
+                <br>
                 3. ¿Crees que la implementación de un sistema de riego automatizado sostenible podría mejorar la calidad de los productos agrícolas?
                 <br>
                 a) Sí, significativamente.
@@ -240,6 +244,8 @@
                 b) Tal vez, pero no estoy seguro.
                 <br>
                 c) No, no afectaría la calidad.
+                <br>
+                 La pregunta de la encuesta nos arrojo los siguientes datos
                 <br>
                 <img src="imagenes/3 encuesta.jpg" alt="Logo 2024" class="1 encuesta">
                 <br>
@@ -253,6 +259,8 @@
                 <br>
                 <img src="imagenes/4 encuesta.jpg" alt="Logo 2024" class="1 encuesta">
                 <br>
+                 La pregunta de la encuesta nos arrojo los siguientes datos
+                <br>
                 5. ¿Cuánto impacto crees que tendría un sistema de riego automatizado en la reducción del uso de agua en comparación con los métodos tradicionales?
                 <br>
                 a) Gran impacto (ahorro de más del 50%).
@@ -261,6 +269,9 @@
                 <br>
                 c) Bajo (ahorro menor al 20%).
                 <br>
+                 La pregunta de la encuesta nos arrojo los siguientes datos
+                <br>
+                Teniendo en cuenta los resultados de la encuesta podemos determinar la necesidad de las personas y su pensamiento, a cerca de la implementacion de un sistema de riego autosostenible para la optimizacion del agua y un recurso en la agricultura
                 <img src="imagenes/5 encuesta.jpg" alt="Logo 2024" class="1 encuesta">
                 <br>
                 Dando los siguientes resultados:
