--- a/proyecto.html
+++ b/proyecto.html
@@ -66,7 +66,7 @@
                 <p class="card-text">La implementación de un sistema de riego novedoso, no solo contribuye a la modernización de los existentes, sino que también contribuye a mitigar los obstáculos que el cambio climático implica, además de cuidar los recursos hídricos puesto que mejoraría la eficiencia en el uso del agua, el uso de tecnologías como el riego por goteo, la microaspersión y los sistemas de riego automatizados, permiten una distribución más precisa del agua y reducen las pérdidas por evaporación y con la intención del presente proyecto se podrá tener un control del uso y consumo de agua en tiempo real.</p>
                 <p class="card-text"><small class="text-muted">Realizado por:Leiner Riaño y Daniel Castro</small></p>
             </div>
-           <img src="imagenes/POSTER.PNG" alt="Logo 2024" class="1 encuesta">
+           <img src="imagenes/POSTER.jpg" alt="Logo 2024" class="1 encuesta">
         </div>
         <div class="col-md-4">
             <img src="imagenes/images.png" class="mi-proyecto" alt="...">
