--- a/proyecto.html
+++ b/proyecto.html
@@ -69,7 +69,7 @@
            <img src="imagenes/POSTER.jpg" alt="Logo 2024" class="1 encuesta">
         </div>
         <div class="col-md-4">
-            <img src="imagenes/images.png" class="mi-proyecto" alt="...">
+            <img src="imagenes/CIRCUITO.jpg" class="mi-proyecto" alt="...">
         </div>
     </div>
 </div>
